--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero";
 
 import ProductShowcase from "../components/ProductShowcase.jsx";
+import "../fonts/stylesheet.css";
 
 const response = await fetch("https://graphql.datocms.com/", {
   method: "POST",
