--- a/src/components/ProductShowcase.css
+++ b/src/components/ProductShowcase.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   transition: background-image 0.3s ease-in-out;
-
+  background-color: #121212;
   background-size: cover;
   background-position: "center";
   color: "white";
@@ -13,13 +13,25 @@
   overflow: hidden;
 }
 
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
 .overlay {
+  position: relative;
   display: flex;
   justify-content: space-between;
   background: rgba(0, 0, 0, 0.4);
   height: 100%;
   inset: 0;
-  z-index: 0;
+  z-index: 1;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
 }
@@ -36,11 +48,13 @@
   gap: 40px;
   width: 280px;
   line-height: 1.3;
-  word-spacing: 50%;
 }
-.info.left h1 {
+
+.info.left span {
   font-size: 80px;
+  font-weight: bold;
 }
+
 .info.left button {
   background-color: white;
   color: black;
@@ -65,8 +79,9 @@
   text-align: end;
 }
 
-.info.right h2 {
+.info.right span {
   font-size: 32px;
+  font-weight: bold;
 }
 
 .info.right .specs {
@@ -149,6 +164,7 @@
     padding-inline: 32px;
   }
 }
+
 @media screen and (max-width: 720px) {
   /* main {
     padding: 182px 2rem 0;
@@ -161,17 +177,19 @@
     border-top-right-radius: 25px;
     overflow: hidden;
   }
+
   .overlay {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
   }
+
   .overlay > .contain {
     display: flex;
     flex-direction: column;
     justify-content: left;
     gap: 64px;
     text-align: left;
-    padding-block: 40px;
+    padding: 40px 20px;
   }
 
   .info.left,
@@ -184,16 +202,21 @@
     text-align: left;
   }
 
+  .info.right span {
+    font-size: 20px;
+  }
+
   .info.left h1 {
     font-size: clamp(40px, 5vw, 62px);
+  }
+
+  .info.right .specs {
+    gap: 12px;
   }
 
   .tabs {
     /* overflow: auto; */
     display: none;
-    padding-inline: 0 62px;
-    width: 100%;
-    bottom: 32px;
   }
 
   .tab img {
@@ -203,11 +226,15 @@
   .tabs.mobile {
     display: flex;
     overflow-x: auto;
-    padding-inline: 32px;
+    padding-inline: 20px;
     width: 100%;
   }
 
   .tabs.mobile::-webkit-scrollbar {
     display: none;
+  }
+
+  .info.left span {
+    font-size: 40px;
   }
 }
