--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -25,6 +25,33 @@
   z-index: 1000;
 }
 
+.overlay-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.5) 15%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0.4) 5%,
+      rgba(0, 0, 0, 0) 10%
+    ),
+    linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.5) 5%,
+      rgba(0, 0, 0, 0) 50%
+    );
+  z-index: 1;
+}
+
 .nav-container {
   max-width: 1280px;
   margin: 0 auto;
@@ -52,6 +79,8 @@
 }
 
 main {
+  position: relative;
+  z-index: 2;
   display: flex;
   height: 100%;
   width: 100%;
