--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  min-height: 720px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -18,6 +19,7 @@
   text-align: center;
   /* font-size: 2rem; */
   /* font-weight: bold; */
+  font-family: var(--font-BCNovatica);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -133,6 +135,7 @@ a.navlink {
 
 .hero-description h1 {
   font-size: clamp(32px, 5vw, 62px);
+  font-family: var(--font-BCNovatica);
 }
 
 .hero-description button {
@@ -143,6 +146,7 @@ a.navlink {
 .hero-description p {
   width: 302px;
   line-height: 1.2;
+  font-family: var(--font-NeueUnica);
 }
 
 .hero-description a {
@@ -152,6 +156,7 @@ a.navlink {
   padding: 24px 32px;
   width: max-content;
   border-radius: 20px;
+  font-family: var(--font-NeueGrotesk);
 }
 
 .navlinks {
