--- a/src/components/ProductShowcase.css
+++ b/src/components/ProductShowcase.css
@@ -3,6 +3,7 @@
   top: -53px;
   width: 100%;
   height: 100vh;
+  min-height: 720px;
   transition: background-image 0.3s ease-in-out;
   background-color: #121212;
   background-size: cover;
@@ -52,8 +53,13 @@
 }
 
 .info.left span {
+  font-family: var(--font-BCNovatica);
   font-size: 80px;
   font-weight: bold;
+}
+
+.info.left p {
+  font-family: var(--font-NeueGrotesk);
 }
 
 .info.left button {
@@ -71,6 +77,7 @@
   padding: 24px 40px;
   font-weight: bold;
   color: rgba(58, 73, 74, 1);
+  font-family: var(--font-NeueGrotesk);
 }
 
 .info.right {
@@ -89,6 +96,14 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+.info.right .specs p {
+  font-family: var(--font-NeueGrotesk);
+}
+
+.info.right .specs span {
+  font-family: var(--font-BCNovatica);
 }
 
 .tabs {
@@ -115,6 +130,7 @@
   width: fit-content;
   height: auto;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  font-family: var(--font-NeueGrotesk);
 }
 
 .description {
@@ -153,6 +169,7 @@
   color: white;
   cursor: pointer;
   width: fit-content;
+  font-family: var(--font-NeueGrotesk);
 }
 
 .tabs.mobile {
