--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+// import "../fonts/stylesheet.css";
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -18,6 +23,7 @@
     margin: 0;
     width: 100%;
     height: 100%;
+    /* font-family: "Neue Haas Grotesk Display Pro"; */
   }
   body::-webkit-scrollbar {
     display: none;
